--- a/client/src/App/css/index.css
+++ b/client/src/App/css/index.css
@@ -3,10 +3,128 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
+  font-family: "Roboto", sans-serif;
 }
 
 #root, .app {
   height: 100%;
+}
+
+div.app {
+  position: relative;
+}
+div.app div.app__background {
+  background-color: #63cdda;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -999;
+}
+div.app div.app__container {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+@media (min-width: 768px) {
+  div.app div.app__container {
+    padding: 40px;
+  }
+}
+@media (min-width: 768px) {
+  div.app div.app__container {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+}
+div.app section.mainsection {
+  background-color: #F0F1F6;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  overflow: hidden;
+  height: 100%;
+  transition: height 0.5s cubic-bezier(0, 1, 0, 1);
+}
+div.app section.mainsection header {
+  background-color: #FFF;
+  height: 50px;
+  padding: 0px 10px;
+  width: 100%;
+  border-bottom: 2px solid #EAEBF0;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  position: relative;
+}
+div.app section.mainsection header p {
+  margin: 0;
+  color: #cccccc;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 0.7px;
+}
+div.app section.mainsection header div.toggle {
+  height: 30px;
+  width: 30px;
+  background-image: url("../images/toggle.svg");
+  background-size: 20px;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.6;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  transition: transform 0.3s;
+  cursor: pointer;
+}
+@media (min-width: 768px) {
+  div.app section.mainsection {
+    margin: 0;
+  }
+}
+
+section.days {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  section.days {
+    grid-column: 1/3;
+    grid-row: 1/3;
+  }
+}
+section.days div.days__container {
+  padding: 10px;
+}
+
+section.allstats {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  section.allstats {
+    grid-column: 3/8;
+    grid-row: 1/2;
+  }
+}
+section.allstats div.allstats__container {
+  padding: 10px;
+}
+
+section.dailystats {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  section.dailystats {
+    grid-column: 3/8;
+    grid-row: 2/3;
+  }
+}
+section.dailystats div.dailystats__container {
+  padding: 10px;
 }
 
 /*# sourceMappingURL=index.css.map */
