--- a/client/src/App/scss/main.scss
+++ b/client/src/App/scss/main.scss
@@ -7,4 +7,7 @@
 
 @import './components/buttons';
 
-@import './layout/header';
+@import './layout/App';
+@import './layout/Days';
+@import './layout/AllStats';
+@import './layout/DailyStats';
