Days now load in and can be selected

--- a/client/src/App/css/index.css
+++ b/client/src/App/css/index.css
@@ -48,7 +48,16 @@ div.app section.mainsection {
   border-radius: 5px;
   overflow: hidden;
   height: 100%;
-  transition: height 0.5s cubic-bezier(0, 1, 0, 1);
+  transition: height 0.5s;
+  -webkit-transition: height 0.5s;
+  -moz-transition: height 0.5s;
+  -ms-transition: height 0.5s;
+  -o-transition: height 0.5s;
+}
+@media (min-width: 768px) {
+  div.app section.mainsection {
+    margin: 0;
+  }
 }
 div.app section.mainsection header {
   background-color: #FFF;
@@ -82,14 +91,9 @@ div.app section.mainsection header div.toggle {
   transition: transform 0.3s;
   cursor: pointer;
 }
-@media (min-width: 768px) {
-  div.app section.mainsection {
-    margin: 0;
-  }
-}
-
 section.days {
   width: 100%;
+  border-bottom: 2px solid #EAEBF0;
 }
 @media (min-width: 768px) {
   section.days {
@@ -98,7 +102,35 @@ section.days {
   }
 }
 section.days div.days__container {
+  margin-top: 10px;
+}
+
+div.day {
   padding: 10px;
+  cursor: pointer;
+}
+div.day:nth-child(odd) {
+  background-color: #fff;
+}
+div.day.selected {
+  background-color: rgba(0, 184, 148, 0.3);
+  background-image: url("../images/checked.svg");
+  background-repeat: no-repeat;
+  background-size: 20px;
+  background-position: 90% center;
+}
+div.day div.day__container p {
+  margin: 0;
+}
+div.day div.day__container p.day__day {
+  font-size: 14px;
+}
+div.day div.day__container p.day__date {
+  font-size: 14px;
+}
+div.day div.day__container p.day__id {
+  font-size: 8px;
+  opacity: 0.6;
 }
 
 section.allstats {
