--- a/client/src/App/scss/layout/_App.scss
+++ b/client/src/App/scss/layout/_App.scss
@@ -36,7 +36,15 @@ div.app{
         border-radius: 5px;
         overflow: hidden;
         height: 100%;
-        transition: height 0.5s cubic-bezier(0, 1, 0, 1);
+        transition: height .5s;
+        -webkit-transition: height .5s;
+        -moz-transition: height .5s;
+        -ms-transition: height .5s;  
+        -o-transition: height .5s; 
+
+        @include respond-above(sm){
+                margin: 0;
+        }
 
         header{
             background-color: #FFF;
@@ -74,9 +82,8 @@ div.app{
             }
         }
 
-        @include respond-above(sm){
-            margin: 0;
-        }
+        div.mainsection__container{
+            // overflow-y: scroll;
+        }        
     }
 }
-//#f4f4f4
