--- a/client/src/App/scss/main.scss
+++ b/client/src/App/scss/main.scss
@@ -9,5 +9,6 @@
 
 @import './layout/App';
 @import './layout/Days';
+@import './layout/Day';
 @import './layout/AllStats';
 @import './layout/DailyStats';
