--- a/client/src/App/scss/layout/_Days.scss
+++ b/client/src/App/scss/layout/_Days.scss
@@ -1,5 +1,6 @@
 section.days{
     width: 100%;
+    border-bottom: 2px solid #EAEBF0;
 
     @include respond-above(sm){
         grid-column: 1 / 3;
@@ -7,6 +8,6 @@ section.days{
     }
 
     div.days__container{
-        padding: 10px;
+        margin-top: 10px;
     }
 }
