--- a/client/src/App/scss/layout/_Day.scss
+++ b/client/src/App/scss/layout/_Day.scss
@@ -28,7 +28,8 @@ div.day{
 
             &.day__id{
                 font-size: 8px;
-                opacity: .6;
+                opacity: .4;
+                letter-spacing: .3px;
             }
         }
     }
