--- a/client/src/App/scss/main.scss
+++ b/client/src/App/scss/main.scss
@@ -6,6 +6,8 @@
 @import './site/base';
 
 @import './components/buttons';
+@import './components/loading';
+@import './components/scrollbar';
 
 @import './layout/App';
 @import './layout/Days';
