--- a/client/src/App/scss/layout/_Days.scss
+++ b/client/src/App/scss/layout/_Days.scss
@@ -5,9 +5,16 @@ section.days{
     @include respond-above(sm){
         grid-column: 1 / 3;
         grid-row: 1 / 3;
+
     }
 
     div.days__container{
         margin-top: 10px;
+
+        @include respond-above(sm){
+            height: calc(100% - 60px);
+            overflow-y: scroll;
+            box-sizing: border-box;
+        }
     }
 }
