--- a/client/src/App/scss/layout/_AllStats.scss
+++ b/client/src/App/scss/layout/_AllStats.scss
@@ -8,5 +8,50 @@ section.allstats{
     
     div.allstats__container{
         padding: 10px;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        box-sizing: border-box;
+
+        @include respond-above(xs){
+            flex-direction: row;
+            height: calc(100% - 60px);
+            overflow-y: scroll;
+            box-sizing: border-box;
+        }
+
+        div.allstats__chart{
+            // border: 1px solid blue;
+            flex: 1;
+            display: flex;
+            align-items: center;
+
+            @include respond-above(xs){
+                flex: 2;
+            }
+
+            div.allstats__chart__container{
+                width: 100%;
+                max-width: 300px;
+                margin: 0 auto;
+
+                @include respond-above(xs){
+                    width: 250px;
+                }
+
+                @include respond-above(sm){
+                    width: 200px;
+                }
+            }
+        }
+
+        div.allstats__info{
+            border: 1px solid blue;
+            flex: 1;
+
+            @include respond-above(md){
+                flex:  2;
+            }
+        }
     }
 }
