--- a/client/src/App/scss/layout/_App.scss
+++ b/client/src/App/scss/layout/_App.scss
@@ -12,19 +12,13 @@ div.app{
 
     div.app__container{
         padding: 20px;
-        display: grid;
         max-width: 1200px;
         margin: 0 auto;
-        grid-template-columns: 1fr;
-        grid-row-gap: 20px;
 
         @include respond-above(sm){
             padding: 40px;
             max-height: 100%;
             box-sizing: border-box;
-        }
-
-        @include respond-above(sm){
             display: grid;
             grid-gap: 10px;
             grid-template-columns: repeat(7, 1fr);
@@ -35,8 +29,14 @@ div.app{
     section.mainsection{
         background-color: #F0F1F6;
         border-radius: 5px;
+        -webkit-border-border-radius: 5px;
+        -moz-border-border-radius: 5px;
+        -ms-border-border-radius: 5px;
+        -o-border-border-radius: 5px;
         overflow: hidden;
-        height: 100%;
+        height: 450px;
+        display: block;
+        margin: 0px 0px 20px 0px;
         transition: height .5s;
         -webkit-transition: height .5s;
         -moz-transition: height .5s;
@@ -45,14 +45,20 @@ div.app{
 
          @include respond-above(sm){
                 margin: 0;
+                height: 100%;
         }
 
         &.collapse{
             height: 50px;
 
+            @include respond-above(sm){
+                height: auto !important;
+            }
+
             &.mainsection__container{
                 overflow: hidden !important;
             }
+
         }
 
         header{
@@ -84,17 +90,20 @@ div.app{
                 opacity: .6;
                 position: absolute;
                 right: 10px;
-                top: 10px;
-                
+                top: 10px;       
                 transition: transform .3s;
                 cursor: pointer;
+
+                @include respond-above(sm){
+                    display: none;
+                }
             }
         }
 
         div.mainsection__container{
             position: relative;
-            max-height: 400px;
             overflow-y: scroll;
+            max-height: calc(100% - 60px);
 
             @include respond-above(sm){
                 max-height: none;
